# games_lecture

./: README.md
.github/workflows/: codeql-analysis.yml
bezier/src/: lib.rs  main.rs
dx12/dx_box/: Cargo.toml
dx12/rust_dx/: Cargo.toml
games101/bezier/: Cargo.toml
games101/bezier/src/: lib.rs  main.rs
games101/hw/: Cargo.toml
games101/hw/src/: lib.rs  main.rs  obj_loader.rs  rasterizer.rs  shader.rs  texture.rs  triangle.rs
games101/hw_raytracer/: Cargo.toml  binary.ppm  cpp.ppm
games101/hw_raytracer/src/: bound.rs  bvh.rs  global.rs  intersection.rs  lib.rs  main.rs  material.rs  obj_loader.rs  ray.rs  render.rs  sah.rs  scene.rs
games101/raytracer/: Cargo.toml
games101/raytracer/src/: lib.rs  main.rs  sphere.rs
games101/raytracer_cpp/: .gitignore  raytracer.cpp
games201/: games201.code-workspace  test.py
games202/Assignment2/homework2/: ..gitignore.un~  .gitignore~  index.html
games202/homework3/: README.md
games202/homework3/src/: engine.js
games202/homework4/images/: README.md
games202/homework4/lut-gen/: Eavg_IS.cpp  (+3 more)
games202/homework5/: .gitignore  README.md
hw/: Cargo.toml
hw/src/: lib.rs  main.rs  obj_loader.rs  rasterizer.rs  texture.rs  triangle.rs
hw1/: Cargo.toml
hw1/src/: lib.rs  main.rs  rasterizer.rs  triangle.rs
hw_raytracer/: Cargo.toml  binary.ppm
hw_raytracer/src/: bound.rs  bvh.rs  global.rs  intersection.rs  lib.rs  light.rs  main.rs  material.rs  obj_loader.rs  ray.rs  render.rs  scene.rs
raytracer/: Cargo.toml
raytracer/src/: lib.rs  main.rs  sphere.rs
raytracer_cpp/: .gitignore  raytracer.cpp
(+80 files in other folders)
