[package]
name = "bezier"
version = "0.1.0"
authors = ["DualWu <wushuang19920125@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.43.2", features = ["buildtime-bindgen"]}
nalgebra = "0.21.1"